tests/typing/bad/nested2.c
#include <stdbool.h>
#include <stdlib.h>
#include <stdio.h>

int main() {
  int x() {}
  int x;
}
